fix: button to open full editor does not redner properly in dark mode

--- a/src/renderer/components/ResizableTable/TableCellContent.module.scss
+++ b/src/renderer/components/ResizableTable/TableCellContent.module.scss
@@ -4,6 +4,7 @@
   box-sizing: border-box;
   width: 100%;
   padding: 0px 10px;
+  user-select: none;
 }
 
 .content {
